--- a/conf/machine/vuzero.conf
+++ b/conf/machine/vuzero.conf
@@ -12,7 +12,7 @@ IMAGE_INSTALL_append += "\
 	vuplus-initrd-${MACHINE} \
 	"
 
-MACHINE_FEATURES += "hbbtv ctrlrc vupluszap"
+MACHINE_FEATURES += "hbbtv ctrlrc vupluszap blindscan-dvbs"
 
 CHIPSET = "bcm7362"
 
