--- a/recipes-bsp/linux/linux-vuduo2-3.13.5/vuduo2_defconfig
+++ b/recipes-bsp/linux/linux-vuduo2-3.13.5/vuduo2_defconfig
@@ -1922,6 +1922,7 @@ CONFIG_DVB_OR51132=m
 CONFIG_DVB_BCM3510=m
 CONFIG_DVB_LGDT330X=m
 CONFIG_DVB_LGDT3305=m
+CONFIG_DVB_LGDT3306A=m
 CONFIG_DVB_LG2160=m
 CONFIG_DVB_S5H1409=m
 CONFIG_DVB_AU8522=m
