--- a/conf/machine/vusolo2.conf
+++ b/conf/machine/vusolo2.conf
@@ -15,7 +15,7 @@ EXTRA_IMAGEDEPENDS += " \
 	enigma2-plugin-systemplugins-manualfancontrol \
 "
 
-MACHINE_FEATURES += "textlcd hbbtv transcoding blindscan-dvbs ctrlrc"
+MACHINE_FEATURES += "textlcd hbbtv transcoding blindscan-dvbs ctrlrc dvbproxy"
 
 CHIPSET = "bcm7356"
 
