do not use dvbproxy on mips model yet

--- a/conf/machine/vuduo2.conf
+++ b/conf/machine/vuduo2.conf
@@ -20,7 +20,7 @@ EXTRA_IMAGEDEPENDS += "\
 	enigma2-plugin-systemplugins-manualfancontrol \
 "
 
-MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs hbbtv wol ctrlrc transcoding dvbproxy"
+MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs hbbtv wol ctrlrc transcoding"
 
 CHIPSET = "bcm7424"
 
