--- a/conf/machine/vusolose.conf
+++ b/conf/machine/vusolose.conf
@@ -12,7 +12,7 @@ IMAGE_INSTALL_append += "\
 	vuplus-initrd-${MACHINE} \
 	"
 
-MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs hbbtv ctrlrc vupluszap transcoding dvbproxy"
+MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs hbbtv ctrlrc vupluszap transcoding"
 
 CHIPSET = "bcm7241"
 
