Add chromiun browser recipes

--- a/conf/machine/vusolo4k.conf
+++ b/conf/machine/vusolo4k.conf
@@ -16,6 +16,7 @@ IMAGE_INSTALL_append += "\
 
 EXTRA_IMAGEDEPENDS += "\
 	enigma2-plugin-extensions-webkithbbtv \
+	enigma2-plugin-extensions-chromium \
 "
 
 MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs hbbtv ctrlrc colorlcd transcoding streamproxy dvbproxy mmc bluetooth kodi"
