--- a/conf/machine/vuultimo4k.conf
+++ b/conf/machine/vuultimo4k.conf
@@ -15,12 +15,7 @@ IMAGE_INSTALL_append += "\
 	vuplus-wifi-util-${MACHINE} \
 	"
 
-EXTRA_IMAGEDEPENDS += "\
-	enigma2-plugin-extensions-webkithbbtv \
-	enigma2-plugin-extensions-chromium \
-"
-
-MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs hbbtv ctrlrc colorlcd transcoding streamproxy dvbproxy mmc bluetooth bcmwifi kodi"
+MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs webkithbbtv ctrlrc colorlcd transcoding streamproxy dvbproxy mmc bluetooth bcmwifi kodi chromiumos"
 
 CHIPSET = "bcm7444"
 
