--- a/conf/machine/vuzero4k.conf
+++ b/conf/machine/vuzero4k.conf
@@ -14,12 +14,7 @@ IMAGE_INSTALL_append += "\
 	vuplus-bluetooth-util-${MACHINE} \
 	"
 
-EXTRA_IMAGEDEPENDS += " \
-	enigma2-plugin-extensions-webkithbbtv \
-	enigma2-plugin-extensions-chromium \
-"
-
-MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs hbbtv ctrlrc dvbproxy mmc bluetooth kodi"
+MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs webkithbbtv ctrlrc dvbproxy mmc bluetooth kodi chromiumos"
 
 CHIPSET = "bcm72604"
 
