--- a/conf/machine/vuduo4k.conf
+++ b/conf/machine/vuduo4k.conf
@@ -17,11 +17,7 @@ IMAGE_INSTALL_append += "\
 	vuplus-wifi-util-${MACHINE} \
 	"
 
-EXTRA_IMAGEDEPENDS += "\
-	enigma2-plugin-extensions-webkithbbtv \
-"
-
-MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs hbbtv ctrlrc colorlcd transcoding streamproxy dvbproxy mmc bluetooth bcmwifi kodi"
+MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs webkithbbtv ctrlrc colorlcd transcoding streamproxy dvbproxy mmc bluetooth bcmwifi kodi"
 
 CHIPSET = "bcm7278"
 
@@ -30,5 +26,3 @@ FORCE_REBOOT_OPTION = "reboot"
 MACHINE_KERNEL_PR = "r0"
 
 IMAGE_FSTYPES =+ "ext4"
-
-PREFERRED_VERSION_linux-${MACHINE} = "4.1.45"
