vudu4k: add fixed version of mmc-utils

--- a/conf/machine/vuduo4k.conf
+++ b/conf/machine/vuduo4k.conf
@@ -17,6 +17,9 @@ IMAGE_INSTALL_append += "\
 	vuplus-wifi-util-${MACHINE} \
 	"
 
+PREFERRED_VERSION_mmc-utils = "0.2"
+PREFERRED_VERSION_linux-${MACHINE} = "4.1.45"
+
 MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs webkithbbtv ctrlrc colorlcd transcoding streamproxy dvbproxy mmc bluetooth bcmwifi kodi"
 
 CHIPSET = "bcm7278"
