Added drivers required for the VU+ Turbo SE Combo USB tuner

--- a/conf/machine/vuzero4k.conf
+++ b/conf/machine/vuzero4k.conf
@@ -27,4 +27,4 @@ MACHINE_KERNEL_PR = "r0"
 IMAGE_FSTYPES =+ "ext4"
 
 PREFERRED_VERSION_linux-${MACHINE} = "4.1.20"
-
+PREFERRED_VERSION_hmp-usb-dvb-t2-c-arm = "V160430"
