--- a/conf/machine/vuduo4k.conf
+++ b/conf/machine/vuduo4k.conf
@@ -19,6 +19,7 @@ IMAGE_INSTALL_append += "\
 
 PREFERRED_VERSION_mmc-utils = "0.2"
 PREFERRED_VERSION_linux-${MACHINE} = "4.1.45"
+PREFERRED_VERSION_hmp-usb-dvb-t2-c-arm = "V160430"
 
 MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs webkithbbtv ctrlrc colorlcd transcoding streamproxy dvbproxy mmc bluetooth bcmwifi chromiumos hdmi-in-helper vu-eglfs"
 
