BSP updates to support implementation of enigma.info

--- a/conf/machine/vuultimo.conf
+++ b/conf/machine/vuultimo.conf
@@ -2,9 +2,22 @@
 #@NAME: Vu+ Ultimo
 #@DESCRIPTION: Machine configuration for the Vu+ Ultimo
 
-UPDATE_DIR = "ultimo"
+SOC_FAMILY = "bcm7413"
+CHIPSET = "bcm7413"
 
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "VU+"
+MACHINE_NAME = "Ultimo"
+
+MTD_ROOTFS = "mtd0"
 MTD_KERNEL = "mtd1"
+KERNEL_FILE = "kernel_cfe_auto.bin"
+ROOTFS_FILE = "root_cfe_auto.jffs2"
+
+MACHINE_FEATURES += " HDMI SCART RCA YUV bwlcd255 ci fan dvb-c blindscan-dvbc blindscan-dvbs ctrlrc opera-browser skins1080 fanctrl"
+OPENPLI_FEATURES += " kodi"
+
+UPDATE_DIR = "ultimo"
 
 require conf/machine/include/vuxxo.inc
 
@@ -14,9 +27,5 @@ EXTRA_IMAGEDEPENDS += "\
 	enigma2-plugin-systemplugins-remotecontrolcode \
 	enigma2-plugin-systemplugins-ledbrightnesssetup \
 	"
-
-MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs ctrlrc opera-browser"
-
-CHIPSET = "bcm7413"
 
 MACHINE_KERNEL_PR = "r5"
