--- a/conf/machine/vuultimo4k.conf
+++ b/conf/machine/vuultimo4k.conf
@@ -2,13 +2,27 @@
 #@NAME: Vu+ Ultimo4k
 #@DESCRIPTION: Machine configuration for the Vu+ Ultimo4k
 
-UPDATE_DIR = "ultimo4k"
+SOC_FAMILY = "bcm7444"
+CHIPSET = "bcm7444"
 
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "VU+"
+MACHINE_NAME = "Ultimo 4K"
+
+MTD_ROOTFS = "mmcblk0p4"
 MTD_KERNEL = "mmcblk0p1"
+KERNEL_FILE = "kernel_auto.bin"
+ROOTFS_FILE = "rootfs.tar.bz2"
+MTD_BLACK  = "mmcblk0"
+
+MACHINE_FEATURES += " HDMI HDMI-IN-FHD hdmi-in-helper displayvfd kexecmb colorlcd800 quadpip ci dvb-c blindscan-dvbc blindscan-dvbs fcc emmc bcmwifi webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc bluetooth chromiumos vu-eglfs"
+OPENPLI_FEATURES += " kodi"
+
+UPDATE_DIR = "ultimo4k"
 
 require conf/machine/include/vuxxo4k.inc
 
-DVBMEDIASINK_CONFIG += " --with-vb9"
+DVBMEDIASINK_CONFIG = "--with-dtsdownmix --with-dts --with-pcm --with-eac3 --with-amr --with-wmv --with-vb6 --with-vb8 --with-vb9 --with-spark --with-h265"
 
 IMAGE_INSTALL_append += "\
 	vuplus-initrd-${MACHINE} \
@@ -16,10 +30,6 @@ IMAGE_INSTALL_append += "\
 	vuplus-bluetooth-util-${MACHINE} \
 	vuplus-wifi-util-${MACHINE} \
 	"
-
-MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs webkithbbtv ctrlrc colorlcd transcoding streamproxy dvbproxy mmc bluetooth bcmwifi chromiumos hdmi-in-helper vu-eglfs"
-
-CHIPSET = "bcm7444"
 
 FORCE_REBOOT_OPTION = "reboot"
 
