--- a/conf/machine/vuuno.conf
+++ b/conf/machine/vuuno.conf
@@ -2,9 +2,22 @@
 #@NAME: Vu+ Uno
 #@DESCRIPTION: Machine configuration for the Vu+ Uno
 
-UPDATE_DIR = "uno"
+SOC_FAMILY = "bcm7413"
+CHIPSET = "bcm7413"
 
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "VU+"
+MACHINE_NAME = "Uno"
+
+MTD_ROOTFS = "mtd0"
 MTD_KERNEL = "mtd1"
+KERNEL_FILE = "kernel_cfe_auto.bin"
+ROOTFS_FILE = "root_cfe_auto.jffs2"
+
+MACHINE_FEATURES += " HDMI SCART RCA YUV textlcd ci fan dvb-c blindscan-dvbc blindscan-dvbs ctrlrc opera-browser skins1080 smallflash fanctrl"
+OPENPLI_FEATURES += " kodi"
+
+UPDATE_DIR = "uno"
 
 require conf/machine/include/vuxxo.inc
 
@@ -13,9 +26,5 @@ EXTRA_IMAGEDEPENDS += "\
 	enigma2-plugin-systemplugins-fpgaupgrade \
 	enigma2-plugin-systemplugins-remotecontrolcode \
 "
-
-MACHINE_FEATURES += "textlcd dvb-c blindscan-dvbc blindscan-dvbs ctrlrc opera-browser"
-
-CHIPSET = "bcm7413"
 
 MACHINE_KERNEL_PR = "r5"
