--- a/conf/machine/vuduo.conf
+++ b/conf/machine/vuduo.conf
@@ -2,15 +2,23 @@
 #@NAME: Vu+ Duo
 #@DESCRIPTION: Machine configuration for the Vu+ Duo
 
+SOC_FAMILY = "bcm7335"
+CHIPSET = "bcm7335"
+
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "VU+"
+MACHINE_NAME = "Duo"
+
+MTD_ROOTFS = "mtd0"
+MTD_KERNEL = "mtd1"
+KERNEL_FILE = "kernel_cfe_auto.bin"
+ROOTFS_FILE = "root_cfe_auto.jffs2"
+
+MACHINE_FEATURES += " HDMI textlcd ci fanctrl skins1080 SCART YUV smallflash"
+
 UPDATE_DIR = "duo"
 
-MTD_KERNEL = "mtd1"
-
 require conf/machine/include/vuxxo.inc
-
-MACHINE_FEATURES += "textlcd opera-browser"
-
-CHIPSET = "bcm7335"
 
 MACHINE_KERNEL_PR = "r5"
 
