--- a/conf/machine/vuduo2.conf
+++ b/conf/machine/vuduo2.conf
@@ -2,9 +2,22 @@
 #@NAME: Vu+ Duo2
 #@DESCRIPTION: Machine configuration for the Vu+ Duo2
 
-UPDATE_DIR = "duo2"
+SOC_FAMILY = "bcm7424"
+CHIPSET = "bcm7424"
 
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "VU+"
+MACHINE_NAME = "Duo²"
+
+MTD_ROOTFS = "mtd0"
 MTD_KERNEL = "mtd2"
+KERNEL_FILE = "kernel_cfe_auto.bin"
+ROOTFS_FILE = "root_cfe_auto.bin"
+
+MACHINE_FEATURES += " HDMI textlcd bwlcd140 ci fan fanctrl skins1080 SCART YUV RCA wol transcoding streamproxy dvbproxy opera-browser blindscan-dvbs blindscan-dvbc dvb-c"
+OPENPLI_FEATURES += " kodi"
+
+UPDATE_DIR = "duo2"
 
 require conf/machine/include/vuxxo2.inc
 
@@ -17,10 +30,6 @@ IMAGE_INSTALL_append += "\
 EXTRA_IMAGEDEPENDS += "\
 	enigma2-plugin-systemplugins-manualfancontrol \
 "
-
-MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs hbbtv wol ctrlrc transcoding streamproxy dvbproxy opera-browser"
-
-CHIPSET = "bcm7424"
 
 MKFS_UBI_MAX_ERASE_BLK_COUNT = "8192"
 FORCE_REBOOT_OPTION = "reboot"
