--- a/conf/machine/vusolo2.conf
+++ b/conf/machine/vusolo2.conf
@@ -2,9 +2,22 @@
 #@NAME: Vu+ Solo2
 #@DESCRIPTION: Machine configuration for the Vu+ Solo2
 
-UPDATE_DIR = "solo2"
+SOC_FAMILY = "bcm7356"
+CHIPSET = "bcm7356"
 
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "VU+"
+MACHINE_NAME = "Solo²"
+
+MTD_ROOTFS = "mtd0"
 MTD_KERNEL = "mtd2"
+KERNEL_FILE = "kernel_cfe_auto.bin"
+ROOTFS_FILE = "root_cfe_auto.bin"
+
+MACHINE_FEATURES += " HDMI textlcd ci fanctrl transcoding streamproxy skins1080 SCART RCA transcoding blindscan-dvbs"
+OPENPLI_FEATURES += " kodi"
+
+UPDATE_DIR = "solo2"
 
 require conf/machine/include/vuxxo2.inc
 
@@ -13,10 +26,6 @@ IMAGE_INSTALL_append += "vuplus-initrd-${MACHINE}"
 EXTRA_IMAGEDEPENDS += " \
 	enigma2-plugin-systemplugins-manualfancontrol \
 "
-
-MACHINE_FEATURES += "textlcd hbbtv transcoding streamproxy dvbproxy blindscan-dvbs ctrlrc opera-browser"
-
-CHIPSET = "bcm7356"
 
 MKFS_UBI_MAX_ERASE_BLK_COUNT = "4096"
 FORCE_REBOOT_OPTION = "reboot"
