--- a/conf/machine/vuuno4k.conf
+++ b/conf/machine/vuuno4k.conf
@@ -2,23 +2,33 @@
 #@NAME: Vu+ Uno4k
 #@DESCRIPTION: Machine configuration for the Vu+ Uno4k
 
-UPDATE_DIR = "uno4k"
+SOC_FAMILY = "bcm7252s"
+CHIPSET = "bcm2752S"
 
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "VU+"
+MACHINE_NAME = "Uno 4K"
+
+MTD_ROOTFS = "mmcblk0p4"
 MTD_KERNEL = "mmcblk0p1"
+KERNEL_FILE = "kernel_auto.bin"
+ROOTFS_FILE = "rootfs.tar.bz2"
+MTD_BLACK  = "mmcblk0"
+
+MACHINE_FEATURES += " HDMI ci dvb-c blindscan-dvbc blindscan-dvbs skins1080 webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc emmc fcc quadpip AV_JACK bluetooth chromiumos vu-eglfs"
+OPENPLI_FEATURES += " kodi"
+
+UPDATE_DIR = "uno4k"
 
 require conf/machine/include/vuxxo4k.inc
 
-DVBMEDIASINK_CONFIG += " --with-vb9"
+DVBMEDIASINK_CONFIG = "--with-dtsdownmix --with-dts --with-pcm --with-eac3 --with-amr --with-wmv --with-vb6 --with-vb8 --with-vb9 --with-spark --with-h265"
 
 IMAGE_INSTALL_append += "\
 	vuplus-initrd-${MACHINE} \
 	enigma2-plugin-systemplugins-bluetoothsetup \
 	vuplus-bluetooth-util-${MACHINE} \
 	"
-
-MACHINE_FEATURES += "dvb-c blindscan-dvbc webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc bluetooth chromiumos vu-eglfs"
-
-CHIPSET = "bcm7252S"
 
 FORCE_REBOOT_OPTION = "force"
 
