renamed MACHINE_BRAND for OE-A compatibility

--- a/conf/machine/vuduo.conf
+++ b/conf/machine/vuduo.conf
@@ -6,7 +6,7 @@ SOC_FAMILY = "bcm7335"
 CHIPSET = "bcm7335"
 
 BRAND_OEM = "vuplus"
-MACHINE_BRAND = "VU+"
+MACHINE_BRAND = "Vu+"
 MACHINE_NAME = "Duo"
 
 MTD_ROOTFS = "mtd0"
