--- a/conf/machine/vuduo2.conf
+++ b/conf/machine/vuduo2.conf
@@ -6,7 +6,7 @@ SOC_FAMILY = "bcm7424"
 CHIPSET = "bcm7424"
 
 BRAND_OEM = "vuplus"
-MACHINE_BRAND = "VU+"
+MACHINE_BRAND = "Vu+"
 MACHINE_NAME = "Duo²"
 
 MTD_ROOTFS = "mtd0"
