--- a/conf/machine/vusolo.conf
+++ b/conf/machine/vusolo.conf
@@ -6,7 +6,7 @@ SOC_FAMILY = "bcm7325"
 CHIPSET = "bcm7325"
 
 BRAND_OEM = "vuplus"
-MACHINE_BRAND = "VU+"
+MACHINE_BRAND = "Vu+"
 MACHINE_NAME = "Solo"
 
 MTD_ROOTFS = "mtd0"
