--- a/conf/machine/vusolose.conf
+++ b/conf/machine/vusolose.conf
@@ -6,7 +6,7 @@ SOC_FAMILY = "bcm7241"
 CHIPSET = "bcm7241"
 
 BRAND_OEM = "vuplus"
-MACHINE_BRAND = "VU+"
+MACHINE_BRAND = "Vu+"
 MACHINE_NAME = "Solo SE"
 
 MTD_ROOTFS = "mtd0"
