--- a/conf/machine/vuuno.conf
+++ b/conf/machine/vuuno.conf
@@ -6,7 +6,7 @@ SOC_FAMILY = "bcm7413"
 CHIPSET = "bcm7413"
 
 BRAND_OEM = "vuplus"
-MACHINE_BRAND = "VU+"
+MACHINE_BRAND = "Vu+"
 MACHINE_NAME = "Uno"
 
 MTD_ROOTFS = "mtd0"
