--- a/conf/machine/vuuno4k.conf
+++ b/conf/machine/vuuno4k.conf
@@ -6,7 +6,7 @@ SOC_FAMILY = "bcm7252s"
 CHIPSET = "bcm2752S"
 
 BRAND_OEM = "vuplus"
-MACHINE_BRAND = "VU+"
+MACHINE_BRAND = "Vu+"
 MACHINE_NAME = "Uno 4K"
 
 MTD_ROOTFS = "mmcblk0p4"
