--- a/conf/machine/vuzero.conf
+++ b/conf/machine/vuzero.conf
@@ -6,7 +6,7 @@ SOC_FAMILY = "bcm73625"
 CHIPSET = "bcm73625"
 
 BRAND_OEM = "vuplus"
-MACHINE_BRAND = "VU+"
+MACHINE_BRAND = "Vu+"
 MACHINE_NAME = "Zero"
 
 MTD_ROOTFS = "mtd0"
