--- a/conf/machine/vuzero4k.conf
+++ b/conf/machine/vuzero4k.conf
@@ -6,7 +6,7 @@ SOC_FAMILY = "bcm72604"
 CHIPSET = "bcm72604"
 
 BRAND_OEM = "vuplus"
-MACHINE_BRAND = "VU+"
+MACHINE_BRAND = "Vu+"
 MACHINE_NAME = "Zero 4K"
 
 MTD_ROOTFS = "mmcblk07"
