--- a/conf/machine/vuduo4k.conf
+++ b/conf/machine/vuduo4k.conf
@@ -6,7 +6,7 @@ SOC_FAMILY = "bcm7376"
 CHIPSET = "bcm7376"
 
 BRAND_OEM = "vuplus"
-MACHINE_BRAND = "VU+"
+MACHINE_BRAND = "Vu+"
 MACHINE_NAME = "Duo 4K"
 
 MTD_ROOTFS = "mmcblk0p9"
