--- a/conf/machine/vusolo2.conf
+++ b/conf/machine/vusolo2.conf
@@ -6,7 +6,7 @@ SOC_FAMILY = "bcm7356"
 CHIPSET = "bcm7356"
 
 BRAND_OEM = "vuplus"
-MACHINE_BRAND = "VU+"
+MACHINE_BRAND = "Vu+"
 MACHINE_NAME = "Solo²"
 
 MTD_ROOTFS = "mtd0"
