--- a/conf/machine/vuultimo4k.conf
+++ b/conf/machine/vuultimo4k.conf
@@ -6,7 +6,7 @@ SOC_FAMILY = "bcm7444"
 CHIPSET = "bcm7444"
 
 BRAND_OEM = "vuplus"
-MACHINE_BRAND = "VU+"
+MACHINE_BRAND = "Vu+"
 MACHINE_NAME = "Ultimo 4K"
 
 MTD_ROOTFS = "mmcblk0p4"
