--- a/conf/machine/vuzero.conf
+++ b/conf/machine/vuzero.conf
@@ -14,7 +14,7 @@ MTD_KERNEL = "mtd2"
 KERNEL_FILE = "kernel_cfe_auto.bin"
 ROOTFS_FILE = "root_cfe_auto.bin"
 
-MACHINE_FEATURES += " HDMI vupluszap textlcd bwlcd140 ci fan fanctrl skins1080 AV_JACK wol dvbproxy opera-browser blindscan-dvbs"
+MACHINE_FEATURES += " HDMI vupluszap textlcd bwlcd140 ci fan fanctrl skins1080 AV_JACK wol opera-browser blindscan-dvbs"
 OPENPLI_FEATURES += " kodi"
 
 UPDATE_DIR = "zero"
