fixed colorlcd values for solo4k and uno4kse

--- a/conf/machine/vuuno4k.conf
+++ b/conf/machine/vuuno4k.conf
@@ -15,7 +15,7 @@ KERNEL_FILE = "kernel_auto.bin"
 ROOTFS_FILE = "rootfs.tar.bz2"
 MTD_BLACK  = "mmcblk0"
 
-MACHINE_FEATURES += " HDMI ci dvb-c blindscan-dvbc blindscan-dvbs skins1080 webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc emmc fcc quadpip AV_JACK bluetooth chromiumos vu-eglfs"
+MACHINE_FEATURES += " HDMI ci dvb-c blindscan-dvbc blindscan-dvbs colorlcd400 skins1080 webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc emmc fcc quadpip AV_JACK bluetooth chromiumos vu-eglfs"
 OPENPLI_FEATURES += " kodi"
 
 UPDATE_DIR = "uno4k"
