fixes after comparison with OE-A

--- a/conf/machine/vuduo2.conf
+++ b/conf/machine/vuduo2.conf
@@ -2,8 +2,8 @@
 #@NAME: Vu+ Duo2
 #@DESCRIPTION: Machine configuration for the Vu+ Duo2
 
-SOC_FAMILY = "bcm7424"
-CHIPSET = "bcm7424"
+SOC_FAMILY = "bcm7425"
+CHIPSET = "bcm7425"
 
 BRAND_OEM = "vuplus"
 MACHINE_BRAND = "Vu+"
@@ -14,7 +14,7 @@ MTD_KERNEL = "mtd2"
 KERNEL_FILE = "kernel_cfe_auto.bin"
 ROOTFS_FILE = "root_cfe_auto.bin"
 
-MACHINE_FEATURES += " HDMI textlcd bwlcd140 ci fan fanctrl skins1080 SCART YUV RCA wol transcoding streamproxy dvbproxy opera-browser blindscan-dvbs blindscan-dvbc dvb-c"
+MACHINE_FEATURES += " HDMI bwlcd140 ci fan fanctrl skins1080 SCART YUV RCA wol transcoding streamproxy dvbproxy opera-browser blindscan-dvbs blindscan-dvbc dvb-c"
 OPENPLI_FEATURES += " kodi"
 
 UPDATE_DIR = "duo2"
