--- a/conf/machine/vuduo4k.conf
+++ b/conf/machine/vuduo4k.conf
@@ -7,7 +7,7 @@ CHIPSET = "bcm7376"
 
 BRAND_OEM = "vuplus"
 MACHINE_BRAND = "Vu+"
-MACHINE_NAME = "Duo 4K"
+MACHINE_NAME = "Duo4K"
 
 MTD_ROOTFS = "mmcblk0p9"
 MTD_KERNEL = "mmcblk0p6"
@@ -15,7 +15,7 @@ KERNEL_FILE = "kernel_auto.bin"
 ROOTFS_FILE = "rootfs.tar.bz2"
 MTD_BLACK  = "mmcblk0"
 
-MACHINE_FEATURES += " HDMI HDMI-IN-FHD displayvfd kexecmb colorlcd480 quadpip ci dvb-c blindscan-dvbc blindscan-dvbs fcc emmc webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc bluetooth bcmwifi chromiumos hdmi-in-helper vu-eglfs"
+MACHINE_FEATURES += " HDMI HDMI-IN-FHD skins1080 displayvfd kexecmb colorlcd480 quadpip ci dvb-c blindscan-dvbc blindscan-dvbs fcc emmc webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc bluetooth bcmwifi chromiumos hdmi-in-helper vu-eglfs"
 OPENPLI_FEATURES += " kodi"
 
 UPDATE_DIR = "duo4k"
