--- a/conf/machine/vusolo.conf
+++ b/conf/machine/vusolo.conf
@@ -14,7 +14,7 @@ MTD_KERNEL = "mtd1"
 KERNEL_FILE = "kernel_cfe_auto.bin"
 ROOTFS_FILE = "root_cfe_auto.jffs2"
 
-MACHINE_FEATURES += " HDMI textlcd ci fanctrl skins1080 SCART YUV smallflash"
+MACHINE_FEATURES += " HDMI textlcd ci fanctrl skins1080 SCART smallflash"
 
 UPDATE_DIR = "solo"
 
