--- a/conf/machine/vuultimo4k.conf
+++ b/conf/machine/vuultimo4k.conf
@@ -15,7 +15,7 @@ KERNEL_FILE = "kernel_auto.bin"
 ROOTFS_FILE = "rootfs.tar.bz2"
 MTD_BLACK  = "mmcblk0"
 
-MACHINE_FEATURES += " HDMI HDMI-IN-FHD hdmi-in-helper displayvfd kexecmb colorlcd800 quadpip ci dvb-c blindscan-dvbc blindscan-dvbs fcc emmc bcmwifi webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc bluetooth chromiumos vu-eglfs"
+MACHINE_FEATURES += " HDMI HDMI-IN-FHD hdmi-in-helper wol wwol skins1080 displayvfd kexecmb colorlcd800 quadpip ci dvb-c blindscan-dvbc blindscan-dvbs fcc emmc bcmwifi webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc bluetooth chromiumos vu-eglfs"
 OPENPLI_FEATURES += " kodi"
 
 UPDATE_DIR = "ultimo4k"
