--- a/conf/machine/vuuno.conf
+++ b/conf/machine/vuuno.conf
@@ -14,7 +14,7 @@ MTD_KERNEL = "mtd1"
 KERNEL_FILE = "kernel_cfe_auto.bin"
 ROOTFS_FILE = "root_cfe_auto.jffs2"
 
-MACHINE_FEATURES += " HDMI SCART RCA YUV textlcd ci fan dvb-c blindscan-dvbc blindscan-dvbs ctrlrc opera-browser skins1080 smallflash fanctrl"
+MACHINE_FEATURES += " HDMI SCART RCA textlcd ci fan dvb-c blindscan-dvbc blindscan-dvbs ctrlrc opera-browser skins1080 smallflash fanctrl"
 
 UPDATE_DIR = "uno"
 
