--- a/conf/machine/vuuno4k.conf
+++ b/conf/machine/vuuno4k.conf
@@ -7,7 +7,7 @@ CHIPSET = "bcm2752S"
 
 BRAND_OEM = "vuplus"
 MACHINE_BRAND = "Vu+"
-MACHINE_NAME = "Uno 4K"
+MACHINE_NAME = "Uno4K"
 
 MTD_ROOTFS = "mmcblk0p4"
 MTD_KERNEL = "mmcblk0p1"
@@ -15,7 +15,7 @@ KERNEL_FILE = "kernel_auto.bin"
 ROOTFS_FILE = "rootfs.tar.bz2"
 MTD_BLACK  = "mmcblk0"
 
-MACHINE_FEATURES += " HDMI ci dvb-c blindscan-dvbc blindscan-dvbs colorlcd400 skins1080 webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc emmc fcc quadpip AV_JACK bluetooth chromiumos vu-eglfs"
+MACHINE_FEATURES += " HDMI ci dvb-c kexecmb blindscan-dvbc blindscan-dvbs colorlcd400 skins1080 webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc emmc fcc quadpip AV_JACK bluetooth chromiumos vu-eglfs"
 OPENPLI_FEATURES += " kodi"
 
 UPDATE_DIR = "uno4k"
