--- a/conf/machine/vuzero4k.conf
+++ b/conf/machine/vuzero4k.conf
@@ -7,15 +7,15 @@ CHIPSET = "bcm72604"
 
 BRAND_OEM = "vuplus"
 MACHINE_BRAND = "Vu+"
-MACHINE_NAME = "Zero 4K"
+MACHINE_NAME = "Zero4K"
 
-MTD_ROOTFS = "mmcblk07"
+MTD_ROOTFS = "mmcblk0p7"
 MTD_KERNEL = "mmcblk0p4"
 KERNEL_FILE = "kernel_auto.bin"
 ROOTFS_FILE = "rootfs.tar.bz2"
 MTD_BLACK  = "mmcblk0"
 
-MACHINE_FEATURES += " HDMI kexecmb ci dvb-c blindscan-dvbc blindscan-dvbs emmc webkithbbtv ctrlrc dvbproxy mmc bluetooth chromiumos vu-eglfs"
+MACHINE_FEATURES += " HDMI skins1080 kexecmb ci dvb-c blindscan-dvbc blindscan-dvbs emmc webkithbbtv ctrlrc dvbproxy mmc bluetooth chromiumos vu-eglfs"
 OPENPLI_FEATURES += " kodi"
 
 UPDATE_DIR = "zero4k"
