--- a/conf/machine/vusolo4k.conf
+++ b/conf/machine/vusolo4k.conf
@@ -7,7 +7,7 @@ CHIPSET = "bcm7376"
 
 BRAND_OEM = "vuplus"
 MACHINE_BRAND = "Vu+"
-MACHINE_NAME = "Solo 4K"
+MACHINE_NAME = "Solo4K"
 
 MTD_ROOTFS = "mmcblk0p4"
 MTD_KERNEL = "mmcblk0p1"
@@ -15,7 +15,7 @@ KERNEL_FILE = "kernel_auto.bin"
 ROOTFS_FILE = "rootfs.tar.bz2"
 MTD_BLACK  = "mmcblk0"
 
-MACHINE_FEATURES += " HDMI displayvfd kexecmb colorlcd480 quadpip ci dvb-c blindscan-dvbc blindscan-dvbs fcc emmc webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc bluetooth chromiumos vu-eglfs"
+MACHINE_FEATURES += " HDMI skins1080 displayvfd kexecmb colorlcd480 quadpip ci dvb-c blindscan-dvbc blindscan-dvbs fcc emmc webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc bluetooth chromiumos vu-eglfs"
 OPENPLI_FEATURES += " kodi"
 
 UPDATE_DIR = "solo4k"
