--- a/conf/machine/vuuno4kse.conf
+++ b/conf/machine/vuuno4kse.conf
@@ -7,7 +7,7 @@ CHIPSET = "bcm2752S"
 
 BRAND_OEM = "vuplus"
 MACHINE_BRAND = "Vu+"
-MACHINE_NAME = "Uno 4K SE"
+MACHINE_NAME = "Uno4K SE"
 
 MTD_ROOTFS = "mmcblk0p4"
 MTD_KERNEL = "mmcblk0p1"
@@ -15,7 +15,7 @@ KERNEL_FILE = "kernel_auto.bin"
 ROOTFS_FILE = "rootfs.tar.bz2"
 MTD_BLACK  = "mmcblk0"
 
-MACHINE_FEATURES += " HDMI HDMI-IN-FHD hdmi-in-helper ci dvb-c blindscan-dvbc blindscan-dvbs skins1080 webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc emmc fcc quadpip bluetooth chromiumos vu-eglfs"
+MACHINE_FEATURES += " HDMI HDMI-IN-FHD hdmi-in-helper colorlcd400 kexecmb ci dvb-c blindscan-dvbc blindscan-dvbs skins1080 webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc emmc fcc quadpip bluetooth chromiumos vu-eglfs"
 OPENPLI_FEATURES += " kodi"
 
 UPDATE_DIR = "uno4kse"
