Add missing OE-A branding from OpenPLi-metas

--- a/conf/machine/vusolo.conf
+++ b/conf/machine/vusolo.conf
@@ -2,13 +2,23 @@
 #@NAME: Vu+ Solo
 #@DESCRIPTION: Machine configuration for the Vu+ Solo
 
+SOC_FAMILY = "bcm7325"
+CHIPSET = "bcm7325"
+
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "Vu+"
+MACHINE_NAME = "Solo"
+
+MTD_ROOTFS = "mtd0"
+MTD_KERNEL = "mtd1"
+KERNEL_FILE = "kernel_cfe_auto.bin"
+ROOTFS_FILE = "root_cfe_auto.jffs2"
+
+MACHINE_FEATURES += " HDMI textlcd ci fanctrl skins1080 SCART smallflash"
+
 UPDATE_DIR = "solo"
 
-MTD_KERNEL = "mtd1"
-
 require conf/machine/include/vuxxo.inc
-
-CHIPSET = "bcm7325"
 
 MACHINE_KERNEL_PR = "r5"
 
