--- a/conf/machine/vusolo4k.conf
+++ b/conf/machine/vusolo4k.conf
@@ -2,21 +2,33 @@
 #@NAME: Vu+ Solo4k
 #@DESCRIPTION: Machine configuration for the Vu+ Solo4k
 
+SOC_FAMILY = "bcm7376"
+CHIPSET = "bcm7376"
+
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "Vu+"
+MACHINE_NAME = "Solo4K"
+
+MTD_ROOTFS = "mmcblk0p4"
+MTD_KERNEL = "mmcblk0p1"
+KERNEL_FILE = "kernel_auto.bin"
+ROOTFS_FILE = "rootfs.tar.bz2"
+MTD_BLACK  = "mmcblk0"
+
+MACHINE_FEATURES += " HDMI skins1080 displayvfd kexecmb colorlcd480 quadpip ci dvb-c blindscan-dvbc blindscan-dvbs fcc emmc webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc bluetooth chromiumos vu-eglfs"
+OPENPLI_FEATURES += " kodi"
+
 UPDATE_DIR = "solo4k"
 
-MTD_KERNEL = "mmcblk0p1"
-
 require conf/machine/include/vuxxo4k.inc
+
+DVBMEDIASINK_CONFIG = "--with-dtsdownmix --with-dts --with-pcm --with-eac3 --with-amr --with-wmv --with-vb6 --with-vb8 --with-spark --with-h265"
 
 IMAGE_INSTALL_append += "\
 	vuplus-initrd-${MACHINE} \
 	enigma2-plugin-systemplugins-bluetoothsetup \
 	vuplus-bluetooth-util-${MACHINE} \
 	"
-
-MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs webkithbbtv ctrlrc colorlcd transcoding streamproxy dvbproxy mmc bluetooth kodi chromiumos vu-eglfs"
-
-CHIPSET = "bcm7376"
 
 FORCE_REBOOT_OPTION = "reboot"
 
