--- a/conf/machine/vusolose.conf
+++ b/conf/machine/vusolose.conf
@@ -2,9 +2,22 @@
 #@NAME: Vu+ SoloSE
 #@DESCRIPTION: Machine configuration for the Vu+ SoloSe
 
-UPDATE_DIR = "solose"
+SOC_FAMILY = "bcm7241"
+CHIPSET = "bcm7241"
 
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "Vu+"
+MACHINE_NAME = "Solo SE"
+
+MTD_ROOTFS = "mtd0"
 MTD_KERNEL = "mtd2"
+KERNEL_FILE = "kernel_cfe_auto.bin"
+ROOTFS_FILE = "root_cfe_auto.bin"
+
+MACHINE_FEATURES += " HDMI textlcd ci fan fanctrl ctrlrc vupluszap opera-browser transcoding streamproxy skins1080 RCA transcoding dvbproxy blindscan-dvbs dvb-c blindscan-dvbc"
+OPENPLI_FEATURES += " kodi"
+
+UPDATE_DIR = "solose"
 
 require conf/machine/include/vuxxo2.inc
 
@@ -12,9 +25,7 @@ IMAGE_INSTALL_append += "\
 	vuplus-initrd-${MACHINE} \
 "
 
-MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs hbbtv ctrlrc vupluszap transcoding streamproxy dvbproxy opera-browser"
-
-CHIPSET = "bcm7241"
+MACHINE_FEATURES += "opera-browser"
 
 MKFS_UBI_MAX_ERASE_BLK_COUNT = "4096"
 FORCE_REBOOT_OPTION = "force"
