--- a/conf/machine/vuduo4k.conf
+++ b/conf/machine/vuduo4k.conf
@@ -2,13 +2,27 @@
 #@NAME: Vu+ Duo4k
 #@DESCRIPTION: Machine configuration for the Vu+ Duo4k
 
-UPDATE_DIR = "duo4k"
+SOC_FAMILY = "bcm7376"
+CHIPSET = "bcm7376"
 
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "Vu+"
+MACHINE_NAME = "Duo4K"
+
+MTD_ROOTFS = "mmcblk0p9"
 MTD_KERNEL = "mmcblk0p6"
+KERNEL_FILE = "kernel_auto.bin"
+ROOTFS_FILE = "rootfs.tar.bz2"
+MTD_BLACK  = "mmcblk0"
+
+MACHINE_FEATURES += " HDMI HDMI-IN-FHD skins1080 displayvfd kexecmb colorlcd480 quadpip ci dvb-c blindscan-dvbc blindscan-dvbs fcc emmc webkithbbtv ctrlrc transcoding streamproxy dvbproxy mmc bluetooth bcmwifi chromiumos hdmi-in-helper vu-eglfs"
+OPENPLI_FEATURES += " kodi"
+
+UPDATE_DIR = "duo4k"
 
 require conf/machine/include/vuxxo4k.inc
 
-DVBMEDIASINK_CONFIG += " --with-vb9"
+DVBMEDIASINK_CONFIG = "--with-dtsdownmix --with-dts --with-pcm --with-eac3 --with-amr --with-wmv --with-vb6 --with-vb8 --with-vb9 --with-spark --with-h265"
 
 IMAGE_INSTALL_append += "\
 	vuplus-initrd-${MACHINE} \
@@ -20,10 +34,6 @@ IMAGE_INSTALL_append += "\
 PREFERRED_VERSION_mmc-utils = "0.2"
 PREFERRED_VERSION_linux-${MACHINE} = "4.1.45"
 PREFERRED_VERSION_hmp-usb-dvb-t2-c-arm = "V160430"
-
-MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs webkithbbtv ctrlrc colorlcd transcoding streamproxy dvbproxy mmc bluetooth bcmwifi kodi chromiumos hdmi-in-helper vu-eglfs"
-
-CHIPSET = "bcm7278"
 
 FORCE_REBOOT_OPTION = "reboot"
 
