--- a/conf/machine/vuzero.conf
+++ b/conf/machine/vuzero.conf
@@ -2,9 +2,22 @@
 #@NAME: Vu+ Zero
 #@DESCRIPTION: Machine configuration for the Vu+ Zero
 
-UPDATE_DIR = "zero"
+SOC_FAMILY = "bcm73625"
+CHIPSET = "bcm73625"
 
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "Vu+"
+MACHINE_NAME = "zero"
+
+MTD_ROOTFS = "mtd0"
 MTD_KERNEL = "mtd2"
+KERNEL_FILE = "kernel_cfe_auto.bin"
+ROOTFS_FILE = "root_cfe_auto.bin"
+
+MACHINE_FEATURES += " HDMI vupluszap fan fanctrl skins1080 AV_JACK wol opera-browser blindscan-dvbs"
+OPENPLI_FEATURES += " kodi"
+
+UPDATE_DIR = "zero"
 
 require conf/machine/include/vuxxo2.inc
 
@@ -12,13 +25,8 @@ IMAGE_INSTALL_append += "\
 	vuplus-initrd-${MACHINE} \
 	"
 
-MACHINE_FEATURES += "hbbtv ctrlrc vupluszap blindscan-dvbs opera-browser"
-
-CHIPSET = "bcm73625"
-
 DVBMEDIASINK_CONFIG += " --with-h265"
 MKFS_UBI_MAX_ERASE_BLK_COUNT = "4096"
 FORCE_REBOOT_OPTION = "force"
 
 MACHINE_KERNEL_PR = "r1"
-
