--- a/conf/machine/vuzero4k.conf
+++ b/conf/machine/vuzero4k.conf
@@ -2,23 +2,33 @@
 #@NAME: Vu+ Zero4K
 #@DESCRIPTION: Machine configuration for the Vu+ Zero4K
 
-UPDATE_DIR = "zero4k"
+SOC_FAMILY = "bcm72604"
+CHIPSET = "bcm72604"
 
+BRAND_OEM = "vuplus"
+MACHINE_BRAND = "Vu+"
+MACHINE_NAME = "Zero4K"
+
+MTD_ROOTFS = "mmcblk0p7"
 MTD_KERNEL = "mmcblk0p4"
+KERNEL_FILE = "kernel_auto.bin"
+ROOTFS_FILE = "rootfs.tar.bz2"
+MTD_BLACK  = "mmcblk0"
+
+MACHINE_FEATURES += " HDMI skins1080 kexecmb ci dvb-c blindscan-dvbc blindscan-dvbs emmc webkithbbtv ctrlrc dvbproxy mmc bluetooth chromiumos vu-eglfs"
+OPENPLI_FEATURES += " kodi"
+
+UPDATE_DIR = "zero4k"
 
 require conf/machine/include/vuxxo4k.inc
 
-DVBMEDIASINK_CONFIG += " --with-vb9"
+DVBMEDIASINK_CONFIG = "--with-dtsdownmix --with-dts --with-pcm --with-eac3 --with-amr --with-wmv --with-vb6 --with-vb8 --with-vb9 --with-spark --with-h265"
 
 IMAGE_INSTALL_append += "\
 	vuplus-initrd-${MACHINE} \
 	enigma2-plugin-systemplugins-bluetoothsetup \
 	vuplus-bluetooth-util-${MACHINE} \
 	"
-
-MACHINE_FEATURES += "dvb-c blindscan-dvbc blindscan-dvbs webkithbbtv ctrlrc dvbproxy mmc bluetooth kodi chromiumos vu-eglfs"
-
-CHIPSET = "bcm72604"
 
 FORCE_REBOOT_OPTION = "force"
 
